# drf

./: .env.sample  Dockerfile  README.md  docker-compose.yaml  dump.rdb  materials_data.json  pyproject.toml  users_data.json
config/: settings.py  urls.py
materials/: admin.py  models.py  serializers.py  services.py  tasks.py  tests.py  urls.py  validators.py  views.py
materials/migrations/: 0001_initial.py  0002_remove_course_lesson_lesson_course.py  0003_alter_lesson_course.py  0004_alter_lesson_link.py  0005_course_owner_lesson_owner.py  0006_alter_course_owner_alter_lesson_owner.py  0007_alter_course_owner_alter_lesson_owner.py  0008_subscription.py  0009_course_price.py  0010_alter_course_price.py
users/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_options_remove_user_username_user_avatar_and_more.py  0003_payments.py  0004_payment.py  0005_payments_link_payments_session_id_and_more.py  0006_remove_payments_link_remove_payments_session_id_and_more.py  0007_alter_coursepurchase_amount.py
